--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.4.4",
+    "autoprefixer": "^10.3.1",
     "core-js": "^3.6.5",
     "next": "12.0.7",
+    "postcss": "^8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
+    "tailwindcss": "^2.2.7",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
