--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.4.4",
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.3.1",
     "core-js": "^3.6.5",
     "next": "12.0.7",
@@ -50,6 +51,8 @@
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^9.0.0",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
