--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-transpile-modules": "^9.0.0",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
+    "sass": "1.43.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.4.3"
   }
