--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@left4code/tw-starter": "^1.1.0",
     "@nrwl/next": "13.4.4",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.1",
@@ -17,6 +18,7 @@
     "postcss": "^8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "8.0.2",
     "regenerator-runtime": "0.13.7",
     "tailwindcss": "^2.2.7",
     "tslib": "^2.0.0"
