--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest": "27.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
     "sass": "1.43.2",
