--- a/package.json
+++ b/package.json
@@ -9,17 +9,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/next": "13.4.4",
-    "@tailwindcss/typography": "^0.4.1",
-    "core-js": "^3.6.5",
-    "next": "12.0.7",
-    "postcss": "^8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-toastify": "8.0.2",
-    "regenerator-runtime": "0.13.7",
-    "tailwindcss": "^2.2.7",
-    "tslib": "^2.0.0",
     "@apollo/client": "^3.4.7",
     "@aws-amplify/ui-react": "^1.2.13",
     "@fullcalendar/common": "^5.10.1",
@@ -30,8 +19,15 @@
     "@fullcalendar/resource-timeline": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@fullcalendar/timeline": "^5.10.1",
+    "@googlemaps/js-api-loader": "^1.12.11",
+    "@googlemaps/markerclusterer": "^1.0.21",
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.3",
+    "@hookform/resolvers": "^2.8.4",
     "@left4code/tw-starter": "^1.1.0",
     "@lourenci/react-kanban": "^2.1.0",
+    "@nrwl/next": "13.4.4",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/": "googlemaps/js-api-loader",
     "@types/next-auth": "^3.15.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -41,6 +37,7 @@
     "axios": "^0.23.0",
     "babel-plugin-transform-import-ignore": "^1.1.0",
     "babel-plugin-transform-require-ignore": "^0.1.1",
+    "core-js": "^3.6.5",
     "css-loader": "5.2.6",
     "cz-customizable": "^6.3.0",
     "eslint-config-prettier": "^8.3.0",
@@ -49,25 +46,33 @@
     "graphql-zeus": "^3.1.5",
     "minio": "^7.0.19",
     "multer": "^1.4.3",
+    "next": "12.0.7",
     "next-connect": "^0.10.2",
     "next-transpile-modules": "^9.0.0",
     "nextjs-progressbar": "^0.0.11",
+    "postcss": "^8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.14.2",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-loading-skeleton": "^3.0.1",
     "react-to-print": "^2.14.0",
+    "react-toastify": "8.0.2",
+    "regenerator-runtime": "0.13.7",
     "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
+    "tailwindcss": "^2.2.7",
+    "tslib": "^2.0.0",
     "uuid": "^8.3.2",
     "xml2js": "^0.4.23",
-    "yup": "^0.32.9",
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.3",
-    "@hookform/resolvers": "^2.8.4",
-    "@googlemaps/js-api-loader": "^1.12.11"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@netlify/plugin-nextjs": "^4.0.0-rc.1",
     "@nrwl/cli": "13.4.4",
     "@nrwl/cypress": "13.4.4",
     "@nrwl/eslint-plugin-nx": "13.4.4",
@@ -78,15 +83,32 @@
     "@nrwl/tao": "13.4.4",
     "@nrwl/web": "13.4.4",
     "@nrwl/workspace": "13.4.4",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.3.7",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/google.maps": "^3.47.3",
     "@types/jest": "27.0.2",
+    "@types/minio": "^7.0.10",
+    "@types/multer": "^1.4.7",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/uuid": "^8.3.1",
+    "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
+    "apollo": "^2.33.4",
     "babel-jest": "27.2.3",
+    "babel-loader": "^8.2.2",
+    "commitizen": "^4.2.4",
     "cypress": "^9.1.0",
     "eslint": "8.2.0",
     "eslint-config-next": "12.0.7",
@@ -96,39 +118,18 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "^7.0.2",
     "jest": "27.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
+    "plop": "^2.7.4",
+    "postcss": "^8",
     "postcss-import": "^14.0.2",
+    "postcss-loader": "^4.2.0",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
     "sass": "1.43.2",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3",
-    "@babel/core": "^7.15.0",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@netlify/plugin-nextjs": "^4.0.0-rc.1",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.3.7",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/google.maps": "^3.47.2",
-    "@types/minio": "^7.0.10",
-    "@types/multer": "^1.4.7",
-    "@types/react-input-mask": "^3.0.1",
-    "@types/uuid": "^8.3.1",
-    "@types/xml2js": "^0.4.9",
-    "apollo": "^2.33.4",
-    "babel-loader": "^8.2.2",
-    "commitizen": "^4.2.4",
-    "husky": "^7.0.2",
-    "plop": "^2.7.4",
-    "postcss": "^8",
-    "postcss-loader": "^4.2.0"
+    "typescript": "~4.4.3"
   }
 }
